# Secure-OTA-Firmware-Update-System

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  guid.txt  sdkconfig.defaults
components/ota_manager/: CMakeLists.txt  ota_manager.c  ota_manager.h
docs/: ARCHITECTURE.md  OTA_WORKFLOW.md  PORTFOLIO_NOTES.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
partition_table/: partitions.csv
scripts/: ota_server.py
